# django-otp-auth

./: .gitignore  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml
django_otp_auth/: serializers.py  services.py  views.py
django_otp_auth/templates/emails/: otp_email.html  otp_email.txt
tests/: settings.py  test_auth.py  test_basic.py  test_magic_auth.py  urls.py
