[project]
name = "django-otp-auth"
version = "0.1.0"
description = "Reusable Django OTP Authentication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rok Sprogar", email = "rok.sprogar@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "dj-rest-auth>=5.0",
    "djangorestframework-simplejwt>=5.0",
]


[project.urls]
Repository = "https://github.com/roksprogar/django-otp-auth"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_otp_auth"]
